# tracers-toy-model

./: .gitignore  Cargo.toml  README.md  plot_tracers.py
ndarray-ops/: Cargo.toml
ndarray-ops/src/: lib.rs
src/: main.rs  tracers.rs
