[package]
name = "tracers-toy-model"
version = "0.1.0"
authors = ["Chris <cwt271@nyu.edu>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num     = "0.3"
ndarray = "0.13"
hdf5    = "0.7"
rand    = "0.7.3"

ndarray-ops = { path = "ndarray-ops" }
